--- a/views/style.css
+++ b/views/style.css
@@ -19,7 +19,7 @@ main {
 }
 
 #main2 {
-    background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fvectors%2Fwallpaper-gradient&psig=AOvVaw1-uTJcuTRaK2ySOFgzIZif&ust=1709035643218000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNi5_IT8yIQDFQAAAAAdAAAAABAE');
+    background-image: url('https://img.freepik.com/free-vector/dark-gradient-background-with-copy-space_53876-99548.jpg');
     background-size: cover;
     background-position: center;
 }
